[project]
name = "qio"
version = "0.1.0"
description = "Python background queue processing with an async twist"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.3.9",
    "pika>=1.3.2",
    "typer[standard]>=0.15.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "ruff>=0.9.6",
    "types-pika>=1.2.0b1",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
force-single-line = true
