[project]
name = "qio"
version = "0.0"
description = "Python background queue processing with an async twist"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dill>=0.3.9",
    "pika>=1.3.2",
    "textual>=3.2.0",
    "typer>=0.15.4",
]

[project.scripts]
qio = "qio.__main__:app"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.9.6",
    "textual-dev>=1.7.0",
    "types-pika>=1.2.0b1",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.qio]
register = ["qio.sample"]
broker = "pika://localhost:5672"
journal = "pika://localhost:5672"

[tool.coverage.run]
branch = true
source = ["qio"]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
